<resources>
    <string name="app_name">City Forest</string>
    <string name="cityforest_logo">CF logo</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiZG9yaWFudHMiLCJhIjoiY2owODMzdm9kMDAxZTMyc2Jwam9rbGVxNSJ9.XYFTdmoxupXYITEOHS-HrA</string>

    <!-- Dialogs -->
    <string name="dialog_add_new_coordinate">Add new coordinate in this location?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_coordinate">Delete this coordinate?</string>
    <string name="dialog_edit_coordinate">Edit this coordinate info?</string>
    <string name="dialog_delete_track">Delete this track?</string>
    <string name="dialog_exit_app_title">Exit CityForest</string>
    <string name="dialog_exit_app_body">Are you sure you want to exit the app?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_change_point">What would you like to do with this point?</string>
    <string name="dialog_remove_point">Delete</string>
    <string name="dialog_move_point">Move</string>
    <string name="dialog_edit_first_stop">Change route starting point?</string>
    <string name="dialog_edit_track">Edit this track info?</string>
    <!--End of dialogs -->


    <string name="summary_txt">Summary</string>
    <string name="title_txt">Title</string>
    <string name="cancel_butt">Cancel</string>
    <string name="save_butt">Save</string>
    <string name="add_coordinates_button">Add Coordinates</string>
    <string name="add_track_button">Add Track</string>
    <string name="cancel_add_track_butt">Cancel adding track</string>
    <string name="delete_coordinates_button">Delete Coordinates</string>
    <string name="edit_coordinates_button">Edit Coordinates</string>
    <string name="update_butt">Update</string>
    <string name="read_more_butt">Read More</string>
    <string name="read_less_butt">Collapse</string>
    <string name="not_here_butt">Not Here</string>
    <string name="coordinates_selected_txt">Coordinates selected: </string>
    <string name="reached_limit_of_coordinates">You have reached the limit of selected coordinates to build a track.</string>
    <string name="not_enough_coordinates_selected">Track can be calculated with at least 2 coordinates</string>
    <string name="distance_km_txt">Distance (km)</string>
    <string name="duration_hour_txt">Duration (hour)</string>
    <string name="ending_point_txt">Ending Point</string>
    <string name="has_water_txt">Has water</string>
    <string name="is_romantic_txt">Is Romantic</string>
    <string name="season_txt">Season</string>
    <string name="starting_point_txt">Starting Point</string>
    <string name="suitable_for_bikes_txt">Suitable For Bikes</string>
    <string name="suitable_for_dogs_txt">Suitable For Dogs</string>
    <string name="suitable_for_families_txt">Suitable For Families</string>
    <string name="track_level_txt">Track Level</string>
    <string name="track_name_txt">Track Name</string>
    <string name="track_summary_txt">Track Summary</string>
    <string name="choose_a_station">Choose a station</string>
    <string name="choose_an_update">Multiple Updates detected, choose one to view details</string>
    <string name="choose_update_message">Choose one to view details</string>
    <string name="choose_type_of_point">Choose type</string>
    <string name="choose_a_level">Choose track level</string>
    <string name="choose_station_empty">Please choose starting and ending train stations</string>
    <string name="choose_distance_empty">Please add the distance of this track</string>
    <string name="choose_level_empty">Please choose the level of this track</string>
    <string name="title_field_empty">Consider adding a title to your point</string>
    <string name="choose_type_of_point_empty">Please choose the type of your point</string>
    <string name="toast_starting_point">Track must start with by a train station</string>
    <string name="toast_ending_point">Track must end with by a train station</string>
    <string name="continue_edit_butt">Continue Edit</string>
    <string name="finish_editing_track_butt">Finish Editing Track</string>
    <string name="save_track_butt">Save Track</string>
    <string name="track_level">Level</string>
    <string name="strating_point_txt">Beginning -</string>
    <string name="distance_txt">Distance (km)</string>
    <string name="ending_point_txt_heb">End -</string>
    <string name="no_track_name">-No Name-</string>
    <string name="update_button">Update</string>
    <string name="welcome_back">"Welcome back,  "</string>
    <string name="hello">hello</string>
    <string name="created_by">Created by</string>
    <string name="at">At</string>


    <string-array name="spinner_list_item_array">
        <item>Editor</item>
    </string-array>

    <string-array name="spinner_editor_list_item_array">
        <item>Home</item>
    </string-array>


    <string-array name="points_of_interest">
        <item>Choose type</item>
        <item>Train Station</item>
        <item>Bus Station</item>
        <item>Historic Site</item>
        <item>Coffee Shop</item>
        <item>Other</item>
    </string-array>


    <string name="edit_options_see_on_map">See on the map</string>
    <string name="edit_options_edit_track">Edit track</string>
    <string name="edit_options_delete_track">Delete track</string>
    <string name="edit_options_choose_track">See track details</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="new_update">Add personal description</string>
    <string name="send_update">Send notification</string>


    <string name="title_activity_home">Home</string>
    <string name="home_action">Home</string>
    <string name="menu_home">Home Page</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_adv_search">Advanced Search</string>
    <string name="menu_user_guide">User Guide</string>
    <string name="menu_tracks">Tracks</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="advanced_search_butt">Advanced Search</string>
    <string name="search_button">Search</string>
    <string name="suitable_for_bikes_heb">Suitable For Bikes</string>
    <string name="suitable_for_dogs_heb">Suitable for Dogs</string>
    <string name="suitable_for_families_heb">Suitable For Families</string>
    <string name="has_water_heb">Track with Water</string>
    <string name="starting_point_hebrew">Starting Point</string>
    <string name="ending_point_hebrew">Endind Point</string>
    <string name="is_romantic_heb">Romantic</string>
    <string name="make_own_track_butt">Create own track</string>
    <string name="make_own_track_txt">Want to build your own track?</string>
    <string name="Make_own_track_menu">Create New Track</string>
    <string name="tracks_txt">Tracks list</string>
    <string name="tracks_menu">Tracks list</string>
    <string name="edit_tracks_button">Edit Tracks</string>
    <string name="sign_out_action">Log Out</string>
    <string name="sign_in_action">Log In</string>
    <string name="language">language</string>
    <string name="sign_in_message">You must sign in first</string>
    <string name="success_message">Your rating was save in the system</string>
    <string name="signin_success">Signed in successfully</string>
    <string name="noppsts">No post uploaded yet. Be the first one to send</string>
    <string name="dog">dog</string>
    <string name="water">water</string>
    <string name="bike">bike</string>


    <string name="permitted_editor" translatable="false">CA9iawp3uZd05WFqjQyERN5hu5R2</string>
    <string name="permitted_editor2" translatable="false">TNHu1lOD4vfz9SY8EEf4bsiQQuG2</string>
    <string name="home_button">Home</string>
    <string name="editor_panel_button">Editor Panel</string>
    <string name="app_title_txt">City Forest</string>
    <string name="what_are_you_up_to_today_txt">What are you up to today?</string>
    <string name="point_of_interest_txt">Point Of Interest?</string>

    <string name="ALGOLIA_APP_ID" translatable="false">23AHHRJOBU</string>
    <string name="ALGOLIA_SEARCH_API_KEY" translatable="false">8fd54c914d7dd05b7a87265beb57cad4</string>
    <string name="ALGOLIA_INDEX_NAME" translatable="false">tracks</string>
    <string name="ALGOLIA_POINTS_OF_INTEREST" translatable="false">points_of_interest</string>

    <string name="query_feature_marker_title" translatable="false">Properties:</string>
    <string name="query_feature_marker_snippet" translatable="false">No feature properties found</string>
    <string name="query_feature_no_properties_found" translatable="false">No feature properties found</string>
    <string name="goto_btn">Track Details</string>
    <string name="no_snippet">-No Snippet-</string>
    <string name="choose_action">Choose action</string>
    <string name="add_points_butt">Add points of interest to track</string>
    <string name="location">Location-</string>
    <string name="start_navigation">Start navigation</string>

    <string name="facebook_app_id" translatable="false">452071661893714</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb452071661893714</string>
    <string name="Type_your_post">Type your post</string>
    <string name="Type_comment">Type comment&#8230;</string>
    <string name="posts_page">Posts</string>
    <string name="not_connected">Not Connected</string>
    <string name="database_error">Error occurred while fetching data</string>
    <string name="remove_update_alert">Must be with in 50m from location to send an update.</string>
    <string name="location_not_found">Location not found, cant send update.</string>
    <string name="notification_removed">Notification removed</string>
    <string name="uploading">Uploading&#8230;"</string>
    <string name="uploaded">Uploaded</string>
    <string name="authentication_failed">Authentication failed</string>

    <string name="weather">Weather</string>
    <string name="no_entrance">No Entrance</string>
    <string name="no_view">No View</string>
    <string name="no_parking">No Parking</string>
    <string name="scenery">Scenery</string>
    <string name="crowded">Crowded</string>
    <string name="different">different</string>
    <string name="doesnt_exist">Does not Exist</string>
    <string name="warning">Warning</string>
</resources>
