<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/signIn"
        android:title="@string/sign_in_action"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/menu_adv_search"
        android:id="@+id/searchTracksActivity"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        />

    <group>

        <!--<item-->
            <!--android:title="@string/menu_adv_search"-->
            <!--android:id="@+id/searchTracksActivity" />-->

        <item
            android:id="@+id/tracksActivity"
            android:title="@string/tracks_menu" />

        <item
            android:id="@+id/makeOwnTrackActivity"
            android:title="@string/Make_own_track_menu" />
    </group>

    <group>
        <item
            android:title="@string/menu_user_guide"
            android:id="@+id/userGuideActivity"/>

        <item
            android:title="@string/menu_contact_us"
            android:id="@+id/contactUsActivity" />

        <item
            android:title="@string/menu_about_us"
            android:id="@+id/aboutActivity" />

        <item
            android:title="@string/language"
            android:id="@+id/languageActivity" />



    </group>

</menu>