<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="right"
    android:layoutDirection="rtl"
    android:layout_gravity="right">



    <item
        android:id="@+id/spinner"
        android:title="my propile"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:title="@string/menu_adv_search"
        android:id="@+id/searchTracksActivity"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        />


    <group>

        <item
            android:id="@+id/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/tracksActivity"
            android:title="@string/tracks_menu" />

        <item
            android:title="@string/menu_user_guide"
            android:id="@+id/userGuideActivity"/>

        <item
            android:title="@string/menu_contact_us"
            android:id="@+id/contactUsActivity" />

        <item
            android:title="@string/menu_about_us"
            android:id="@+id/aboutActivity" />

        <item
            android:title="@string/language"
            android:id="@+id/languageActivity" />

        <item
            android:title="@string/sign_out_action"
            android:id="@+id/signOut"/>

    </group>

</menu>