<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zehava.cityforest.EditorHomeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/selectActionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:text="@string/welcome_back"/>

    <TextView
        android:id="@+id/messageTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/what_are_you_up_to_today_txt"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editorPanelButt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/editor_panel_button"
        android:textColor="#FFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="116dp" />

    <Button
        android:id="@+id/homeButt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/home_button"
        android:textColor="#FFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="247dp" />
</LinearLayout>
