<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_dream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zehava.cityforest.Activities.CreateNewTrackActivity"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/track_name_txt" />

        <EditText
            android:id="@+id/trackNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:id="@+id/startingPointLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:id="@+id/startingPointTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/starting_point_txt"
                android:gravity="start"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/startingPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start" />

            <!--<TextView-->
                <!--android:id="@+id/startingPoint"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="start" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endingPointLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:id="@+id/endingPointTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ending_point_txt"
                android:gravity="start"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/endingPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1" />

            <!--<TextView-->
                <!--android:id="@+id/endingPoint"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="start"-->
                <!--android:layout_weight="1" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/durationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="start"
            android:weightSum="2">

            <TextView
                android:id="@+id/durationTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/duration_hour_txt"
                android:gravity="start"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/durationField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:ems="10"
                tools:ignore="LabelFor"
                android:inputType="number"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/distanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="start">

            <TextView
                android:id="@+id/distanceTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/distance_km_txt"
                android:gravity="start"/>

            <TextView
                android:id="@+id/distanceField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start"
                android:inputType="number"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/additionalInfoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/track_summary_txt"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/trackSummaryField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textSize="14sp"
            tools:ignore="LabelFor" />
        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/addPointsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/add_points_butt"
                tools:ignore="ButtonOrder,ButtonStyle,RtlHardcoded" />


        </LinearLayout>



        <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cancel_butt"
            tools:ignore="ButtonOrder,ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/save_butt"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


    </LinearLayout>
</ScrollView>